--- a/create-handle/build.gradle
+++ b/create-handle/build.gradle
@@ -8,7 +8,6 @@ dependencies {
 
     implementation libs.nva.json
     implementation libs.nva.core
-    implementation libs.nva.events
     implementation libs.nva.apigateway
 
     implementation libs.aws.lambda.java.core
@@ -26,5 +25,7 @@ test {
     environment "DATABASE_URI", "database_uri"
     environment "DATABASE_USER", "database_user"
     environment "DATABASE_PASSWORD", "database_password"
+    environment "API_HOST", "api.localhost.nva.aws.unit.no"
+    environment "ALLOWED_ORIGIN", "*"
 }
 
