SMILE-9202 added missing allow for ec2:DescribeSecurityGroups

--- a/template.yaml
+++ b/template.yaml
@@ -94,13 +94,14 @@ Resources:
                   - logs:CreateLogStream
                   - logs:PutLogEvents
                 Resource: !Sub 'arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:*:*'
-        - PolicyName: describeSubnets
+        - PolicyName: describeSubnetsAndSecurityGroups
           PolicyDocument:
             Version: 2012-10-17
             Statement:
               - Effect: Allow
                 Action:
                   - ec2:DescribeSubnets
+                  - ec2:DescribeSecurityGroups
                 Resource: "*"
 
   NvaCreateHandleFunction:
