--- a/template.yaml
+++ b/template.yaml
@@ -62,8 +62,7 @@ Resources:
       AccessLogSetting:
         DestinationArn: !GetAtt ApiAccessLogGroup.Arn
         Format: '{ "apiId": "$context.apiId", "requestId": "$context.requestId", "requestTime": "$context.requestTime", "requestTimeEpoch": "$context.requestTimeEpoch", "httpMethod": "$context.httpMethod", "path": "$context.path", "status": "$context.status",  "error.message": "$context.error.message" }'
-      Name: !Sub "${AWS::StackName}"
-      StageName: v1
+      StageName: Prod
       EndpointConfiguration:
         Type: PRIVATE
       DefinitionBody:
