--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,16 @@
-
 plugins {
-    id 'nva-handle-service.java-library-conventions'
-}
-
-group 'no.unit.nva'
-version '1.0-SNAPSHOT'
-
-sourceCompatibility = JavaVersion.VERSION_11  // source-code version and must be <= targetCompatibility
-targetCompatibility = JavaVersion.VERSION_11 // bytecode target version
-
-wrapper {
-    distributionType = Wrapper.DistributionType.ALL
-    gradleVersion = "7.4.2"
+    id 'nva-handle-service.rootplugin'
 }
 
 allprojects {
-    apply plugin: 'nva-handle-service.java-library-conventions'
+    apply plugin: 'nva-handle-service.java-common-conventions'
 }
 
-build {
-    dependsOn jacocoRootReport
+tasks.withType(JavaCompile) {
+    sourceCompatibility = JavaVersion.VERSION_21
+}
+
+wrapper {
+    gradleVersion = "8.5"
+    distributionType = Wrapper.DistributionType.ALL
 }
