--- a/create-handle/build.gradle
+++ b/create-handle/build.gradle
@@ -15,6 +15,8 @@ dependencies {
     testImplementation libs.nva.testutils
     testImplementation libs.nva.json
 
+    testImplementation libs.bundles.testing
+
 }
 
 test {
